--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     	<!----header design--->
 	<header>
 		<!-- <a href="#" class="logo">RO<span>M</span>AN MEDIA</a> -->
-        <a href="#" class="logo"><img src="ASSETS/IMAGES/roman logo-02.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="ASSETS/IMAGES/roman logo-02.png" alt=""></a>
 
 		<ul class="navlist">
 			<li><a href="index.html">Home</a></li>
