--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <!----home section design--->
-	<section class="home" id="home">
+	<section class="home" id="home" style="background-image: url(ASSETS/IMAGES/port/portfolio1.jpg); >
 		<div class="home-text">
 			<div class="slide">
 				<span class="one">Hello</span>
