--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     	<!----header design--->
 	<header>
 		<!-- <a href="#" class="logo">RO<span>M</span>AN MEDIA</a> -->
-       <a href="index.html" class="logo"><img src="ASSETS/IMAGES/roman logo-02.png" alt=""></a>
+        <a href="#" class="logo"><img src="ASSETS/IMAGES/roman logo-02.png" alt=""></a>
+
 		<ul class="navlist">
             <li><a href="index.html" class="active">Home</a></li>
 			<li><a href="about.html">About</a></li>
@@ -33,20 +34,38 @@
 
 
     <!----home section design--->
-	<section class="home" id="home" style="background-image: url(ASSETS/IMAGES/port/portfolio1.jpg); >
-		<div class="home-text">
+	 <section class="home" id="home" <!--style="background-image: url(ASSETS/IMAGES/port/portfolio1.jpg);-->"> 
+		
+		<!--<div class="home-text">
 			<div class="slide">
 				<span class="one">Hello</span>
 				<span class="two">We are</span>
 			</div>
 			<h1>Roman Media Graphics Ltd</h1>
-			<!-- <h3>UI/UX<span> Designer.</span></h3> -->
+			
 			<p>With 5+ years experience that keep customers <br> coming back for about services makes best effort.</p>
-			<!-- <div class="button"> 
-				<a href="#" class="btn">Say Hello</a>
-				<a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Watch My Work</a>
-			</div>-->
-		</div>
+			
+		
+		 </div> -->
+		 <section class="about" id="about">
+			
+			<div class="home-text">
+				<div class="slide">
+					<span class="one">Hello</span>
+					<span class="two">We are</span>
+				</div>
+				<h2>Roman Media Graphics Ltd</h2>
+				
+				<p>With 5+ years experience that keep customers <br> coming back for about services makes best effort.</p>
+				
+			
+			 </div>
+			</div>
+
+			<div class="about-img">
+				<img src="ASSETS/IMAGES/port/portfolio1.jpg">
+			</div>
+		</section>
 	</section>
 
 
@@ -58,9 +77,11 @@
 
 		<div class="about-text">
 			<h2>About <span>us</span></h2>
-			<h4>printing and branding</h4>
-			<p>Check out our Best projects  companies for your needs by reviewing our list & development companies! Find the best  design. Design Consulting. Comprehensive Directory. Top Reviewed Design Firms. Types: Enterprise Design Firms, Startup Design Firms, Custom Design Firms, eCommerce Design Firms, App Design Firms. Custom Web Solution. 24x7 Customer Support. Secure Payment Gateway. Get A Free Web Quote. 24/7 Chat Support. Services: Web Page Design, Landing Page Design, App development, Mobile Website Design</p>
-			<a href="#" class="btn">More About</a>
+			<h4>We are a designing printing and branding company </h4>
+			<p>Roman Media Graphics Limited is a Ugandan company specializing in commercial printing, graphics design, and general supplies. 
+				We offer unique solutions for businesses and organizations, catering to education institutions, non-government organizations, corporate sectors, and the public.
+				We commit to quality and detail ensuring satisfied clients and long-lasting business relationships, based on integrity and honesty.</p>
+			<a href="about.html" class="btn">More About</a>
 		</div>
 	</section>
 
@@ -76,16 +97,16 @@
 		<div class="services-content">
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-mobile-alt' ></i>
+					<i class='bx bx-pen'></i>
 				</div>
 				<h3> Creative Design</h3>
-				<p>One way to categorize the activities is in terms of the professional’s area of expertise such as competitive analysis, corporate strategy.</p>
+				<p>We craft visually compelling and innovative solutions to communicate ideas and messages  capturing attention and conveying brand identity</p>
 				<a href="#" class="read">Read More</a>
 			</div>
 
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-code-alt' ></i>
+					<i class='bx bx-printer'></i>
 				</div>
 				<h3>printing</h3>
 				<p>One way to categorize the activities is in terms of the professional’s area of expertise such as competitive analysis, corporate strategy.</p>
@@ -96,8 +117,8 @@
 				<div class="s-icons">
 					<i class='bx bx-edit-alt' ></i>
 				</div>
-				<h3>branding</h3>
-				<p>One way to categorize the activities is in terms of the professional’s area of expertise such as competitive analysis, corporate strategy.</p>
+				<h3>Branding</h3>
+				<p>We create a unique identity for a business or product, encompassing its visual elements, messaging, and overall perception.</p>
 				<a href="#" class="read">Read More</a>
 			</div>
 
@@ -179,8 +200,8 @@
 			<h4>If You Have Any Project In Your Mind.</h4>
 			<p>We create bold & brave  designs for companies all across the world.</p>
 			<div class="list">
-				<li><a href="#">+256 700 000000</a></li>
-				<li><a href="#">Romanmediagraphics@rgmail.com</a></li>
+				<li><a href="#">0771676871, 0705880754</a></li>
+				<li><a href="#">Romanmediagraphics@gmail.com</a></li>
 				<!-- <li><a href="#">Like Share & Subscribe</a></li> -->
 			</div>
 
@@ -192,7 +213,7 @@
 			</div>
 		</div>
 
-		<!-- <div class="contact-form"> 
+		<!-- <div class="contact-form">  
 			<form action="">
 				<input type="name" placeholder="Your Name" required>
 				<input type="email" placeholder="Your Email Address" required>
