--- a/about.html
+++ b/about.html
@@ -33,30 +33,134 @@
 	</header>
 
 
+
+
+	<hr class="featurette-divider">
+<section style=" display: block; margin-top: 20%; text-align: center; padding: 20px;">
+	<h2 class="about-big">ABOUT</h2>
+	<h4 class="about-big2">Roman Media Graphics Ltd</h4>
+</section>
+
+
+
+
     <!----about section design--->
+
 	<section class="about" id="about">
-		<!-- <div class="about-img">
+		<div class="about-img">
 			<img src="ASSETS/IMAGES/port/portfolio1.jpg">
-		</div> -->
+		</div>
 
 		<div class="about-text">
-			<h2>About <span>us</span></h2>
-			<!-- <h4>printing and branding</h4> -->
-			<p> 
-                <h4>Roman Media Graphics Limited </h4> 
-
-                is a dedicated commercial printing, graphics design and general supplies company in Uganda dealing with development of unique 
-                solutions to help businesses and organizations achieve purposeful communications through effective and affordable communication media. <br>
-                 We are focused on the printing needs of education institutions, non-government organizations, the corporate sector and the public. <br>
-                 We are committed to keeping print relevant. Our focus is firmly fixed on a future that acknowledges the changing shift in the way we,
-                 as humans, communicate. Our experience has enabled us to provide the best possible printing and supplies solution where attention is 
-                 given to quality and detail, resulting in  satisfied clients with whom we have lasting business relationships.<br>
-                 The foundation of our business is integrity and honesty. We take pride in the client relationships that have 
-                developed resulting in interdependency and mutual growth.We are fully registered with the Uganda Registration Services Bureau.
-            </p>
-			<!-- <a href="#" class="btn">More About</a> -->
+			
+			<p>	We are a dedicated commercial printing, graphics design and general supplies
+				company in Uganda dealing with development of unique 
+		solutions to help businesses and organizations achieve purposeful
+		communications through effective and affordable communication media.</p>
+			
 		</div>
 	</section>
+	<hr class="featurette-divider">
+	<section class="about" id="about">
+		<div class="about-text">
+			
+			<p>	We are focused on the printing needs of education institutions, non-government organizations, the corporate sector and the public. <br>
+				We are committed to keeping print relevant. Our focus is firmly fixed on a future that acknowledges the changing shift in the way we,
+				as humans, communicate. Our experience has enabled us to provide the best possible printing and supplies solution where attention is 
+				given to quality and detail, resulting in  satisfied clients with whom we have lasting business relationships.</p>
+			
+		</div>
+		<div class="about-img">
+			<img src="ASSETS/IMAGES/port/portfolio1.jpg">
+		</div>
+	</section>
+	<hr class="featurette-divider">
+	<section class="about" id="about">
+		<div class="about-img">
+			<img src="ASSETS/IMAGES/port/portfolio1.jpg">
+		</div>
+
+		<div class="about-text">
+			
+			<p>	The foundation of our business is integrity and honesty. 
+				We take pride in the client relationships that have 
+				developed resulting in interdependency and mutual growth.
+				 We are fully registered with the Uganda Registration Services Bureau. </p>
+			
+		</div>
+	</section>
+
+	<hr class="featurette-divider">
+
+
+	<section class="goals" id="goals">
+		
+
+		<div class="goals-content">
+			<div class="box">
+				<div class="s-icons">
+					<i class='bx bx-target-lock'></i>
+				</div>
+				<h3> Our mission</h3>
+				<p>To enhance our identity
+                    and that of our clients
+                    by providing excellent and
+                    competitive professional services
+                    as well as exceptionally
+                    quality products.</p>
+			</div>
+
+			<div class="box">
+				<div class="s-icons">
+					<i class='bx bx-target-lock'></i>
+				</div>
+				<h3>Our Vision</h3>
+                    <p>To be one of industry’s
+                        leaders and preferred choice 
+                        for printing, branding and general 
+                        supplies for our clients.</p>
+			</div>
+
+			<div class="box">
+				<div class="s-icons">
+					<i class='bx bx-edit-alt' ></i>
+				</div>
+				<h3>Our Values</h3>
+                    <p>To enhance our identity
+                        and that of our clients
+                        by providing excellent and
+                        competitive professional services
+                        as well as exceptionally
+                        quality products.</p>
+			</div>
+
+
+			<div class="box">
+				<div class="s-icons">
+					<i class='bx bx-edit-alt' ></i>
+				</div>
+				<h3>Our Team</h3>
+                    <p>Roman Media Graphics Ltd boasts of a young and
+						enterprising team with new ideas to meet today’s
+						dynamic consumer needs.</p>
+						
+			</div>
+
+		</div>
+	</section>
+
+	<section>
+		<div>
+			<div class="box-img">
+				<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="">
+				
+			</div>
+		</div>
+	</section>
+
+	
+
+
 
     <!----end section design--->
 	<section class="end">
