--- a/about.html
+++ b/about.html
@@ -14,7 +14,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    	<!----header design--->
+    	
+	
+	<!----header design--->
 	<header>
 		<!-- <a href="#" class="logo">RO<span>M</span>AN MEDIA</a> -->
         <a href="index.html" class="logo"><img src="ASSETS/IMAGES/roman logo-02.png" alt=""></a>
@@ -32,11 +34,9 @@
 		</div>
 	</header>
 
-
-
-
 	<hr class="featurette-divider">
-<section style=" display: block; margin-top: 20%; text-align: center; padding: 20px;">
+
+<section style=" display: block; margin-top: 10%; text-align: center; padding: 20px;">
 	<h2 class="about-big">ABOUT</h2>
 	<h4 class="about-big2">Roman Media Graphics Ltd</h4>
 </section>
@@ -55,8 +55,9 @@
 			
 			<p>	We are a dedicated commercial printing, graphics design and general supplies
 				company in Uganda dealing with development of unique 
-		solutions to help businesses and organizations achieve purposeful
-		communications through effective and affordable communication media.</p>
+				solutions to help businesses and organizations achieve purposeful
+				communications through effective and affordable communication media.
+			</p>
 			
 		</div>
 	</section>
@@ -77,7 +78,7 @@
 	<hr class="featurette-divider">
 	<section class="about" id="about">
 		<div class="about-img">
-			<img src="ASSETS/IMAGES/port/portfolio1.jpg">
+			<img src="ASSETS/IMAGES/about-img/integrity.jpg">
 		</div>
 
 		<div class="about-text">
@@ -85,7 +86,7 @@
 			<p>	The foundation of our business is integrity and honesty. 
 				We take pride in the client relationships that have 
 				developed resulting in interdependency and mutual growth.
-				 We are fully registered with the Uganda Registration Services Bureau. </p>
+				We are fully registered with the Uganda Registration Services Bureau. </p>
 			
 		</div>
 	</section>
@@ -93,8 +94,13 @@
 	<hr class="featurette-divider">
 
 
-	<section class="goals" id="goals">
+	<section class="goals" id="goals" >
+	
 		
+		<section style=" display: block; margin-top: 10%; text-align: center; padding: 20px;">
+			<h2 class="about-big">Our Company Objectives</h2>
+		
+		</section>
 
 		<div class="goals-content">
 			<div class="box">
@@ -126,12 +132,9 @@
 					<i class='bx bx-edit-alt' ></i>
 				</div>
 				<h3>Our Values</h3>
-                    <p>To enhance our identity
-                        and that of our clients
-                        by providing excellent and
-                        competitive professional services
-                        as well as exceptionally
-                        quality products.</p>
+                    <p>we prioritize creativity, quality, and customer 
+						satisfaction in all our services. Integrity, transparency, 
+						and sustainability guide our innovative practices.</p>
 			</div>
 
 
@@ -149,15 +152,6 @@
 		</div>
 	</section>
 
-	<section>
-		<div>
-			<div class="box-img">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="">
-				
-			</div>
-		</div>
-	</section>
-
 	
 
 
@@ -165,14 +159,14 @@
     <!----end section design--->
 	<section class="end">
 		<div class="last-text">
-			<p>Copyright © 2024 by Roman Media Graphics Ltd <br> All Rights Reserved.</p>
+			<p>Copyright © 2024 by Roman Media Graphics Ltd All Rights Reserved.</p>
 		</div>
 
 		<div class="top">
-			<a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
+			<a href="#about"><i class='bx bx-up-arrow-alt' ></i></a>
 		</div>
 	</section>
-
+	<canvas id="canvas"></canvas>
     <script src="ASSETS/javascript/indexscript.js"></script>
     <script src="ASSETS/javascript/indexscript2.js"></script>
 </body>
