--- a/portfolio.html
+++ b/portfolio.html
@@ -36,62 +36,135 @@
     <!----portfolio section design--->
 	<section class="portfolio" id="portfolio">
 		<div class="main-text">
-			<p>Portfolio</p>
+			<p style="font-size: 40px;">Portfolio</p>
 			<h2><span>Latest</span> Projects</h2>
+			<p>
+				Roman Media Graphics Limited has offered a number of services to Non Profit
+				organisations,<br> Management Organizations, Educational Institutions
+				and Private Companies</p>
+				<p style="color: var(--text-color); font-size: 20px;">A List of some of our client that we are proud to be associated with and these reflect
+					the firm’s experience and capability.</p>
 		</div>
 
 		<div class="portfolio-content">
 			<div class="row">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg">
+				<img src="ASSETS/IMAGES/port/rmcp-01.png">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top  design  companies.</p>
-					<a href="#"><i class='bx bx-link-external' ></i></a>
+					<h5>Petrolink</h5>
+					<p> is an independent, neutral, wellsite data solutions 
+						company helping clients effectively aggregate, 
+						integrate, analyze, store and distribute wellsite data</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
 				</div>
 			</div>
 
 			<div class="row">
-				<img src="ASSETS/IMAGES/port/portfolio2.jpg">
+				<img src="ASSETS/IMAGES/port/rmcp-02.png">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
-					<a href="#"><i class='bx bx-link-external' ></i></a>
+					<h5>ATX Technology</h5>
+					<p>A leading Contractor in Uganda providing infrastructure
+						installation, construction and maintenance services for telecoms, 
+						power and water utility companies, OEM vendors and municipal authorities.</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
 				</div>
 			</div>
 
 			<div class="row">
-				<img src="ASSETS/IMAGES/port/portfolio3.jpg">
+				<img src="ASSETS/IMAGES/port/rmcp-03.png">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
-					<a href="#"><i class='bx bx-link-external' ></i></a>
+					<h5>Tugende</h5>
+					<p> A for-profit social enterprise in Uganda. It uses asset finance, technology, and a
+						 customer-centric model to help informal sector entrepreneurs (MSMEs) 
+						 dramatically increase their economic trajectory</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
 				</div>
 			</div>
 
 			<div class="row">
-				<img src="ASSETS/IMAGES/port/portfolio4.jpg">
+				<img src="ASSETS/IMAGES/port/rmcp-04.png">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
-					<a href="#"><i class='bx bx-link-external' ></i></a>
+					<h5>Talent Africa Group</h5>
+					<p> Focuses on the event design and production 
+						and together they deliver an unmatched experience to your event  driven by their
+						services. </p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
 				</div>
 			</div>
 
 			<div class="row">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg">
+				<img src="ASSETS/IMAGES/port/rmcp-05.png">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
-					<a href="#"><i class='bx bx-link-external' ></i></a>
+					<h5>World Agroforestry</h5>
+					<p> (ICRAF) is a centre
+						 of science and development excellence that harnesses 
+						 the benefits of trees for people and the environment</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
 				</div>
 			</div>
 
 			<div class="row">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg">
+				<img src="ASSETS/IMAGES/port/rmcp-06.png">
 				<div class="layer">
-					<h5>Visual Design</h5>
-					<p>Check out 10 Best Design's updates for the top web design & development companies.</p>
-					<a href="#"><i class='bx bx-link-external' ></i></a>
+					<h5> Medical Teams Int. </h5>
+					<p>Delivering Life-saving Medical Care to People in Crisis
+						bymobilize staff and volunteers quickly – entering places of turmoil,
+						 disease and natural disaster – to save lives and leave communities healthier.</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
+				</div>
+			</div>
+
+			<div class="row">
+				<img src="ASSETS/IMAGES/port/rmcp-07.png">
+				<div class="layer">
+					<h5>Zuku</h5>
+					<p>A homegrown East African brand under Wananchi Group, 
+						established with the aim of making quality home entertainment and 
+						communication services accessible to a rapidly growing, 
+						choice conscious African middle class.</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
+				</div>
+			</div>
+
+			<div class="row">
+				<img src="ASSETS/IMAGES/port/rmcp-08.png">
+				<div class="layer">
+					<h5>URSB</h5>
+					<p> Registers the following types of companies: Single member company, 
+						public company, private company limited by shares,
+						 company limited by guarantee and Foreign company.</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
+				</div>
+			</div>
+
+			<div class="row">
+				<img src="ASSETS/IMAGES/port/rmcp-09.png">
+				<div class="layer">
+					<h5>PM's office</h5>
+					<p>The Leader of Government Business in Parliament ie responsible for
+						 coordination and implementation of Government Policies across Ministries, 
+						 Departments and other Public Institutions</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
+				</div>
+			</div>
+
+			<div class="row">
+				<img src="ASSETS/IMAGES/port/rmcp-10.png">
+				<div class="layer">
+					<h5>Church World Service</h5>
+					<p> Works with partners to eradicate hunger and poverty and 
+						to promote peace and justice around the world.</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
+				</div>
+			</div>
+
+			<div class="row">
+				<img src="ASSETS/IMAGES/port/rmcp-11.png">
+				<div class="layer">
+					<h5>NFLC</h5>
+					<p> is to overcome poverty through mind-set transformation of farmer leaders, 
+						civic and political leaders and other categories of leaders, 
+						through mind-set change, and advanced agricultural technology transfer</p>
+					<!-- <a href="#"><i class='bx bx-link-external' ></i></a> -->
 				</div>
 			</div>
 
