--- a/trial.html
+++ b/trial.html
@@ -5,20 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website with Navbar</title>
     <link rel="stylesheet" href="ASSETS/style/trial.css">
+
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  
 </head>
 <body>
-    <header>
-        <div class="logo">MyWebsite</div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            <button class="nav-toggle" id="nav-toggle">☰</button>
-        </nav>
-    </header>
+    
+  <div class="container">
+    <!-- Your website content here -->
+    <h1>Welcome to my website!</h1>
+</div>
+
+PRECEPT
+of
+HONOUR
+
+<canvas id="canvas"></canvas>
     <script src="ASSETS/javascript/trialscript.js"></script>
 </body>
 </html>
