--- a/about.html
+++ b/about.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>roman media</title>
+
+	<link
+	rel="icon"
+	href="ASSETS/IMAGES/roman logo-02.png"
+	type="image/x-icon"/>
+	
     <link rel="stylesheet" href="ASSETS/style/about.css">
 
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" 
+  integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" 
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +114,8 @@
 		<div class="goals-content">
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-target-lock'></i>
+					<!-- <i class='bx bx-target-lock'></i> -->
+					<i class="bi bi-bullseye"></i>
 				</div>
 				<h3> Our mission</h3>
 				<p>To enhance our identity
@@ -118,7 +128,8 @@
 
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-target-lock'></i>
+					<!-- <i class='bx bx-target-lock'></i> -->
+					<i class="bi bi-eyeglasses"></i>
 				</div>
 				<h3>Our Vision</h3>
                     <p>To be one of industry’s
@@ -140,7 +151,8 @@
 
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-edit-alt' ></i>
+					<!-- <i class='bx bx-edit-alt' ></i> -->
+					<i class="bi bi-people"></i>
 				</div>
 				<h3>Our Team</h3>
                     <p>Roman Media Graphics Ltd boasts of a young and
