--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>roman media</title>
+	<link
+	rel="icon"
+	href="ASSETS/IMAGES/roman logo-02.png"
+	type="image/x-icon"/>
     <link rel="stylesheet" href="ASSETS/style/index.css">
 
     <link rel="stylesheet"
@@ -37,17 +41,7 @@
     <!----home section design--->
 	 <section class="home" id="home"> 
 		
-		<!--<div class="home-text">
-			<div class="slide">
-				<span class="one">Hello</span>
-				<span class="two">We are</span>
-			</div>
-			<h1>Roman Media Graphics Ltd</h1>
-			
-			<p>With 5+ years experience that keep customers <br> coming back for about services makes best effort.</p>
-			
-		
-		 </div> -->
+	
 		 <section class="about" id="about">
 			
 			<div class="home-text">
