--- a/services.html
+++ b/services.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>roman media</title>
+
+	<link
+	rel="icon"
+	href="ASSETS/IMAGES/roman logo-02.png"
+	type="image/x-icon"/>
+
     <link rel="stylesheet" href="ASSETS/style/services.css">
 
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+  <link rel="stylesheet" href=
+  "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" 
+  integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" 
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +48,7 @@
 
 	<canvas id="canvas"></canvas>
     <!----service section design--->
-	<section class="services" id="services">
+	<section class="services" id="services" style="margin-bottom: 0px;" >
 		<div class="main-text">
 			<p>What we are Experts In</p>
 			<h2><span>Our</span> Services</h2>
@@ -45,17 +56,16 @@
 
 		<div class="card-grid">
 			<div class="card">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="Card Image 2" class="card-image">
+				<img src="ASSETS/IMAGES/services-img/graphic.jpg" alt="Card Image 2" class="card-image" style="border-collapse: white;">
 				<div class="card-content">
-				  <h2 class="card-title">Branding</h2>
-				  <p class="card-description">Comprehensive branding solutions
-					 that are tailored to the needs
-					of your company, resulting in a brand image that is 
-					consistent and has an impact across all channels.</p>
+				  <h2 class="card-title">Graphics designing</h2>
+				  <p class="card-description">We create stunning visuals, 
+					from logos business cards, flyers to banners that make your brand 
+					stand out and captivate your audience.</p>
 				</div>
-			  </div>
+			</div>
 			<div class="card">
-			  <img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="Card Image 2" class="card-image">
+			  <img src="ASSETS/IMAGES/services-img/hele-01.png" alt="Card Image 2" class="card-image">
 			  <div class="card-content">
 				<h2 class="card-title">UV Printing</h2>
 				<p class="card-description">Accuracy meets quality in everything about our UV printing administrations, 
@@ -63,22 +73,22 @@
 			  </div>
 			</div>
 			<div class="card">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="Card Image 2" class="card-image">
+				<img src="ASSETS/IMAGES/services-img/bks-01.png" alt="Card Image 2" class="card-image">
 				<div class="card-content">
 				  <h2 class="card-title">Printing Services</h2>
 				  <p class="card-description">High-quality, customized printing for all your needs. 
 					From business cards to banners, we deliver vibrant
 					colors and professional finishes, fast and affordably.</p>
 				</div>
-			  </div>
+			</div>
 			  <div class="card">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="Card Image 2" class="card-image">
+				<img src="ASSETS/IMAGES/services-img/car-01.png" alt="Card Image 2" class="card-image">
 				<div class="card-content">
 				  <h2 class="card-title">Car Branding</h2>
 				  <p class="card-description">With eye-catching car branding, your vehicles become 
 					mobile brand ambassadors and take your brand on the road.</p>
 				</div>
-			  </div>
+			</div>
 			  <div class="card">
 				<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="Card Image 2" class="card-image">
 				<div class="card-content">
@@ -86,19 +96,81 @@
 				  <p class="card-description">We offer vibrant DTF Printing that brings out detailed designs on various fabrics without pre-treatment. 
 					Perfect for custom apparel, it delivers durable, soft-to-the-touch prints with ease</p>
 				</div>
-			  </div>
+			</div>
 			  <div class="card">
-				<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="Card Image 2" class="card-image">
+				<img src="ASSETS/IMAGES/services-img/signs.jpg" alt="Card Image 2" class="card-image">
 				<div class="card-content">
-				  <h2 class="card-title">Branding</h2>
-				  <p class="card-description">Car branding, Wall branding, pvc banners, Office Branding
-					Glass facia branding, banners, Pull up banners, Tear drop
+				  <h2 class="card-title">Signages</h2>
+				  <p class="card-description">
 					banners, feather banners, Shop front branding, events,
 					Point of purchase branding, Branded shopping bags.</p>
 				</div>
-			  </div>
+			</div>
+			  <div class="card">
+				<img src="ASSETS/IMAGES/services-img/bottles.jpg" alt="Card Image 2" class="card-image">
+				<div class="card-content">
+				  <h2 class="card-title">Signages</h2>
+				  <p class="card-description">
+					banners, feather banners, Shop front branding, events,
+					Point of purchase branding, Branded shopping bags.</p>
+				</div>
+			</div>
 			
 			
+		</div>
+		
+		
+	</section>
+
+
+
+	<section class="services" id="services" style="margin-top: 0px;padding-top: 0;">
+		<div class="main-text">
+			<h3><span>Other</span> Services</h3>
+		</div>
+
+		<div class="scroll-cards">
+			<div class="wrapper">
+				<i id="left" class="fa-solid  fas fa-angle-left"></i>
+				<ul class="carousel">
+					<li class="s-card">
+						<div class="img">
+							<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="" draggable="false"> </div>
+						<h2 style="color:var(--main-color); font-weight:bold;"> </h2>
+						<span>Coding Platform</span>
+					</li>
+
+					<li class="s-card">
+						<div class="img">
+							<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="" draggable="false"> </div>
+						<h2 style="color:var(--main-color); font-weight:bold;"> </h2>
+						<span>Coding Platform</span>
+					</li>
+
+					<li class="s-card">
+						<div class="img">
+							<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="" draggable="false"> </div>
+						<h2 style="color:var(--main-color); font-weight:bold;"> </h2>
+						<span>Coding Platform</span>
+					</li>
+
+					<li class="s-card">
+						<div class="img">
+							<img src="ASSETS/IMAGES/port/portfolio1.jpg" alt="" draggable="false"> </div>
+						<h2 style="color:var(--main-color); font-weight:bold;"></h2>
+						<span>Coding Platform</span>
+					</li>
+
+
+
+
+
+					
+				</ul>
+				<i id="right" class="fa-solid fas fa-angle-right"></i>
+			</div>
+
+
 		</div>
 		
 		
