--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>roman media</title>
+
+	<link
+	rel="icon"
+	href="ASSETS/IMAGES/roman logo-02.png"
+	type="image/x-icon"/>
     <link rel="stylesheet" href="ASSETS/style/contact.css">
 
     <link rel="stylesheet"
@@ -71,13 +76,15 @@
 		</div>
 
 		<div class="contact-form" style="color: white;"> 
-			<form action="">
+			<form action="" style="color: aliceblue;">
 				<input type="name" placeholder="Your Name " required>
 				<input type="email" placeholder="Your Email Address" required>
 				<input type="" placeholder="Your Mobile Number" required>
 				<textarea name="" id="" cols="35" rows="10" placeholder="How Can We Help You" required></textarea>
-				<input type="submit" value="Send Message" class="submit" required>
+				<!-- <input type="submit" value="Send Message" class="submit" required> -->
+				
 			</form>
+			<a href="thank you.html" class="submit">submit</a>
 		</div>
 		<div class="contact-text">
 			
