--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>roman media</title>
+
+	<link
+	rel="icon"
+	href="ASSETS/IMAGES/roman logo-02.png"
+	type="image/x-icon"/>
+	
     <link rel="stylesheet" href="ASSETS/style/portfolio.css">
 
     <link rel="stylesheet"
